--- a/model_scripts/gen-vanilla-lstm.ipynb
+++ b/model_scripts/gen-vanilla-lstm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,13 +11,20 @@
      "text": [
       "Using device: cuda\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/storageG1/lwang/miniconda3/envs/tb_amp_env/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from icecream import ic\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -25,7 +32,6 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.metrics import roc_curve\n",
-    "from xgboost import XGBClassifier\n",
     "\n",
     "import random\n",
     "import numpy as np\n",
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,11 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbbasp = pd.read_csv(\"../models1/database_check/DBAASP_peptides.csv\")\n",
+    "dbbasp = pd.read_csv(\"./database_check/DBAASP_peptides.csv\")\n",
     "dbbasp = dbbasp[dbbasp[\"SEQUENCE\"].str.len() >= 10]\n",
     "dbbasp = dbbasp[~dbbasp[\"TARGET GROUP\"].str.contains(\"Fungus\", na=False)]\n",
     "dbbasp = dbbasp[[\"ID\", \"SEQUENCE\"]]\n",
@@ -132,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'K', 'C', 'Q', 'G', 'F', 'A', 'D', 'Y', 'P', 'M', 'H', 'E', 'I', 'V', 'L', 'S', 'T', 'W', 'R', 'N'}\n",
+      "{'E', 'M', 'R', 'N', 'H', 'Q', 'W', 'A', 'S', 'T', 'Y', 'F', 'G', 'K', 'D', 'L', 'I', 'P', 'V', 'C'}\n",
       "20\n",
       "Number of sequences after filtering: 3306\n",
       "Dataset sizes: {'Train': 2219, 'Validation': 475, 'Test': 476}\n",
@@ -258,129 +264,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### sliding window data gen"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Re-import required libraries after environment reset\n",
-    "# import torch\n",
-    "# import pandas as pd\n",
-    "# from torch.nn.utils.rnn import pad_sequence, pack_padded_sequence\n",
-    "# from torch.utils.data import Dataset, DataLoader\n",
-    "# from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# # Load only positive (AMP) sequences\n",
-    "# adam_df = pd.read_csv(\"../data/naturalAMPs_APD2024a-ADAM.csv\")\n",
-    "\n",
-    "# # Clean non-standard amino acids\n",
-    "# unique_letters = set(''.join(adam_df[\"Sequence\"]))\n",
-    "# amino_acids = \"ACDEFGHIKLMNPQRSTVWY\"\n",
-    "# # non_standard_amino_acids = set(unique_letters) - set(amino_acids)\n",
-    "# # adam_df = adam_df[~adam_df[\"Sequence\"].str.contains('|'.join(non_standard_amino_acids))]\n",
-    "\n",
-    "# # Apply sliding window to generate fragments\n",
-    "# def generate_fragments(sequences, window_size=15, stride=5):\n",
-    "#     fragments = []\n",
-    "#     for seq in sequences:\n",
-    "#         for start in range(0, len(seq) - window_size + 1, stride):\n",
-    "#             fragment = seq[start:start + window_size]\n",
-    "#             fragments.append(fragment)\n",
-    "#     return fragments\n",
-    "\n",
-    "# generation_fragments = generate_fragments(adam_df[\"Sequence\"].tolist())\n",
-    "\n",
-    "# # Define one-hot encoding function\n",
-    "# def one_hot_torch(seq: str, dtype=torch.float32):\n",
-    "#     amino_acids = \"ACDEFGHIKLMNPQRSTVWY\"\n",
-    "#     seq_bytes = torch.ByteTensor(list(bytes(seq, \"utf-8\")))\n",
-    "#     aa_bytes = torch.ByteTensor(list(bytes(amino_acids, \"utf-8\")))\n",
-    "#     arr = torch.zeros(len(amino_acids), len(seq_bytes), dtype=dtype)\n",
-    "#     for i, aa in enumerate(aa_bytes):\n",
-    "#         arr[i, seq_bytes == aa] = 1\n",
-    "#     return arr\n",
-    "\n",
-    "# # Dataset using one-hot encoding for generative modeling\n",
-    "# class AMPGenerationOneHotDataset(Dataset):\n",
-    "#     def __init__(self, sequences):\n",
-    "#         self.sequences = sequences\n",
-    "\n",
-    "#     def __len__(self):\n",
-    "#         return len(self.sequences)\n",
-    "\n",
-    "#     def __getitem__(self, idx):\n",
-    "#         seq = self.sequences[idx]\n",
-    "#         input_seq = seq[:-1]  # all residues except the last\n",
-    "#         target_seq = seq[1:]  # all residues except the first\n",
-    "#         input_one_hot = one_hot_torch(input_seq)  # shape: [20, seq_len - 1]\n",
-    "#         target_one_hot = one_hot_torch(target_seq)  # shape: [20, seq_len - 1]\n",
-    "#         length = input_one_hot.shape[1]\n",
-    "#         return input_one_hot, target_one_hot, length\n",
-    "\n",
-    "# # Collate function for packing one-hot sequences\n",
-    "# def collate_and_pack_for_generation(batch):\n",
-    "#     sequences, targets, lengths = zip(*batch)\n",
-    "#     lengths = torch.tensor(lengths)\n",
-    "\n",
-    "#     # Sort by length (required for packing)\n",
-    "#     sorted_indices = torch.argsort(lengths, descending=True)\n",
-    "#     sequences = [sequences[i] for i in sorted_indices]\n",
-    "#     targets = [targets[i] for i in sorted_indices]\n",
-    "#     lengths = lengths[sorted_indices]\n",
-    "\n",
-    "#     # Transpose each to [L, 20] and pad\n",
-    "#     sequences = [seq.T for seq in sequences]  # from [20, L] to [L, 20]\n",
-    "#     targets = [tgt.T for tgt in targets]      # from [20, L] to [L, 20]\n",
-    "\n",
-    "#     padded_seqs = pad_sequence(sequences, batch_first=False)  # [L, B, 20]\n",
-    "#     padded_targets = pad_sequence(targets, batch_first=False)  # [L, B, 20]\n",
-    "\n",
-    "#     packed_input = pack_padded_sequence(padded_seqs, lengths.cpu(), batch_first=False)\n",
-    "#     packed_target = pack_padded_sequence(padded_targets, lengths.cpu(), batch_first=False)\n",
-    "\n",
-    "#     return packed_input, packed_target, lengths\n",
-    "\n",
-    "# # Train/val/test split\n",
-    "# train_seqs, test_seqs = train_test_split(generation_fragments, test_size=0.3, random_state=42)\n",
-    "# val_seqs, test_seqs = train_test_split(test_seqs, test_size=0.5, random_state=42)\n",
-    "\n",
-    "# train_dataset = AMPGenerationOneHotDataset(train_seqs)\n",
-    "# val_dataset = AMPGenerationOneHotDataset(val_seqs)\n",
-    "# test_dataset = AMPGenerationOneHotDataset(test_seqs)\n",
-    "\n",
-    "# train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True, collate_fn=collate_and_pack_for_generation)\n",
-    "# val_loader = DataLoader(val_dataset, batch_size=64, shuffle=False, collate_fn=collate_and_pack_for_generation)\n",
-    "# test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False, collate_fn=collate_and_pack_for_generation)\n",
-    "\n",
-    "# # Dataset sizes for verification\n",
-    "# dataset_sizes = {\n",
-    "#     \"Train\": len(train_dataset),\n",
-    "#     \"Validation\": len(val_dataset),\n",
-    "#     \"Test\": len(test_dataset)\n",
-    "# }\n",
-    "# print(\"Dataset sizes:\", dataset_sizes)\n",
-    "\n",
-    "# for x, y, l in train_loader:\n",
-    "#     print(\"Input shape:\", x.data.shape)  # [L, B, 20]\n",
-    "#     print(\"Target shape:\", y.data.shape)  # [L, B, 20]\n",
-    "#     print(\"Lengths:\", y.batch_sizes)  # Lengths of sequences in the batch\n",
-    "#     break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5026,18 +4915,11 @@
     "        f.write(f\">peptide{i}\\n\")\n",
     "        f.write(peptide + \"\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-ml",
+   "display_name": "tb_amp_env",
    "language": "python",
    "name": "python3"
   },
