--- a/model_scripts/lstm_no_transfer.ipynb
+++ b/model_scripts/lstm_no_transfer.ipynb
@@ -2,25 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/storageG1/lwang/miniconda3/envs/new-ml/lib/python3.10/site-packages/xgboost/core.py:377: FutureWarning: Your system has an old version of glibc (< 2.28). We will stop supporting Linux distros with glibc older than 2.28 after **May 31, 2025**. Please upgrade to a recent Linux distro (with glibc >= 2.28) to use future versions of XGBoost.\n",
-      "Note: You have installed the 'manylinux2014' variant of XGBoost. Certain features such as GPU algorithms or federated learning are not available. To use these features, please upgrade to a recent Linux distro with glibc 2.28+, and install the 'manylinux_2_28' variant.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#env: new-ml\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from icecream import ic\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -28,7 +17,6 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.metrics import roc_curve\n",
-    "from xgboost import XGBClassifier\n",
     "\n",
     "import random\n",
     "import numpy as np\n",
@@ -50,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +89,7 @@
      "output_type": "stream",
      "text": [
       "128\n",
-      "{'F', 'S', 'P', 'Q', 'T', 'G', 'L', 'X', 'E', 'H', 'W', 'M', 'C', 'D', 'A', 'R', 'I', 'V', 'K', 'N', 'Y'}\n",
+      "{'V', 'T', 'R', 'X', 'P', 'K', 'E', 'Y', 'A', 'H', 'D', 'G', 'I', 'F', 'L', 'W', 'C', 'S', 'M', 'N', 'Q'}\n",
       "21\n",
       "{'X'}\n",
       "Number of 'B' values: 0\n"
@@ -2640,7 +2628,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-ml",
+   "display_name": "tb_amp_env",
    "language": "python",
    "name": "python3"
   },
