--- a/model_scripts/lstm_transfer.ipynb
+++ b/model_scripts/lstm_transfer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,7 @@
     }
    ],
    "source": [
+    "# tb_amp_env\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,11 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbbasp = pd.read_csv(\"../models1/database_check/DBAASP_peptides.csv\")\n",
+    "dbbasp = pd.read_csv(\"../data/DBAASP_peptides.csv\")\n",
     "dbbasp = dbbasp[dbbasp[\"SEQUENCE\"].str.len() >= 10]\n",
     "dbbasp = dbbasp[~dbbasp[\"TARGET GROUP\"].str.contains(\"Fungus\", na=False)]\n",
     "dbbasp = dbbasp[[\"ID\", \"SEQUENCE\"]]\n",
@@ -245,7 +253,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22202, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adam_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(106370, 2)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uniprot_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +419,7 @@
        "[38787 rows x 2 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3760,7 +3815,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/all_seq702.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AMP\n",
+       "0.0    235\n",
+       "1.0    205\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['AMP'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3768,14 +3855,21 @@
      "output_type": "stream",
      "text": [
       "128\n",
-      "{'E', 'X', 'H', 'M', 'P', 'T', 'N', 'V', 'G', 'L', 'A', 'K', 'F', 'Q', 'Y', 'C', 'W', 'S', 'I', 'R', 'D'}\n",
+      "{'H', 'W', 'L', 'D', 'M', 'X', 'R', 'I', 'K', 'A', 'N', 'T', 'V', 'F', 'P', 'S', 'Y', 'G', 'C', 'E', 'Q'}\n",
       "21\n",
       "{'X'}\n",
-      "Number of 'B' values: 0\n",
-      "Dataset sizes:\n",
-      "Train: 264\n",
-      "Validation: 88\n",
-      "Test: 88\n"
+      "Number of 'B' values: 0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'SequenceDataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 39\u001b[0m\n\u001b[1;32m     33\u001b[0m X_test, X_val, y_test, y_val \u001b[38;5;241m=\u001b[39m train_test_split(\n\u001b[1;32m     34\u001b[0m     X_test, y_test, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m, stratify\u001b[38;5;241m=\u001b[39my_test\n\u001b[1;32m     35\u001b[0m )  \u001b[38;5;66;03m# 0.1765 to maintain 15% of original dataset\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Define DataLoaders\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mSequenceDataset\u001b[49m(X_train, y_train)\n\u001b[1;32m     40\u001b[0m val_dataset \u001b[38;5;241m=\u001b[39m SequenceDataset(X_val, y_val)\n\u001b[1;32m     41\u001b[0m test_dataset \u001b[38;5;241m=\u001b[39m SequenceDataset(X_test, y_test)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'SequenceDataset' is not defined"
      ]
     }
    ],
